# box

./: .gitignore  CMakeLists.txt  LICENSE  README.md  premake5.lua
box/: CMakeLists.txt  premake5.lua
box/include/box/backend/interpreter/vm/: Chunk.hpp  Instructions.hpp  VirtualMachine.hpp
box/include/box/frontend/: Types.hpp
box/include/box/frontend/lexer/: Lexer.hpp  Lexers.hpp  Token.hpp
box/include/box/frontend/parser/: Parser.hpp  parser_rule.hpp
box/include/box/frontend/tools/: RegEx.hpp
box/src/box/backend/interpreter/vm/: Chunk.cpp  VirtualMachine.cpp
box/src/box/frontend/lexer/: Lexer.cpp  Lexers.cpp
box/src/box/frontend/parser/: Parser.cpp  parser_rule.cpp
cmake/: array_macros.cmake  file_macros.cmake  project_module.cmake
conan/: conanfile.txt
conan/box/include/box/frontend/lexer/: Lexer.hpp  Lexers.hpp
conan/box/src/box/frontend/lexer/: Lexer.cpp
conan/box/src/box/frontend/parser/: Parser.cpp
examples/person/: main.box  person.box
plandoc/: ParserRule.md
sandbox/: CMakeLists.txt  premake5.lua
sandbox/src/: main.cpp
scripts/premake/: cross_workspace.lua  multi_conan.lua  predefines.lua
